@@ -8,12 +8,14 @@ if sys.modules["gnome_sudoku"].installed_mode:
     LOCALEDIR = os.path.join(APP_DATA_DIR, 'locale')
     GLADE_DIR = os.path.join(APP_DATA_DIR,'gnome-sudoku')
     BASE_DIR = os.path.join(APP_DATA_DIR,'gnome-sudoku')
+    PUZZLE_DIR = os.path.join(APP_DATA_DIR,'gnome-sudoku','puzzles')    
 else:
     APP_DATA_DIR = os.path.join('@abs_top_builddir@', 'gnome-sudoku', 'data') 
     IMAGE_DIR = os.path.join('@abs_top_builddir@', 'gnome-sudoku', 'images')
     LOCALEDIR = os.path.join(APP_DATA_DIR, 'locale')
     GLADE_DIR = os.path.join('@abs_top_builddir@', 'gnome-sudoku', 'glade')
-    BASE_DIR = os.path.join('@abs_top_builddir@', 'gnome-sudoku', 'data') 
+    BASE_DIR = os.path.join('@abs_top_builddir@', 'gnome-sudoku', 'data')
+    PUZZLE_DIR = BASE_DIR    
 
 DOMAIN = 'gnome-games'
 gettext.bindtextdomain(DOMAIN, LOCALEDIR)
